<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TaxiCosto</string>
    <string name="action_settings">Settings</string>
    <string name="desde_label">Mi ubicación...</string>
    <string name="hasta_label">Mi destino...</string>
    <string name="estimar_label">Estimar costo del recorrido</string>
    <string name="title_activity_recorrido">Recorrido</string>
    <string name="tiempo_label">(10 min)</string>
    <string name="distancia_label">7 km</string>
    <string name="recorrido_label">Valor estimado $3.00</string>
    <string name="guardar_label">Guardar</string>
    <string name="title_activity_mapa_recorrido"></string>
    <string name="title_activity_informacion">Información</string>
    <string name="key_google">AIzaSyAuiXYqtydlSf3TuiZPYioR-u8WQAiJ1Jc</string>

</resources>
