<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.jonathanbravo.taxicosto.mapa.Recorrido"
    android:weightSum="1">

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_weight="1.01" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:weightSum="1"
        android:background="@drawable/layout_top_sombra">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1.01"
            android:layout_gravity="left"
            android:gravity="left"
            android:background="@drawable/layout_right_sombra">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/distancia_label"
                    android:id="@+id/distanciaText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/tiempo_label"
                    android:id="@+id/tiempoText"
                    android:paddingLeft="5dp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/recorrido_label"
                android:id="@+id/estimadoText"
                android:layout_gravity="center_horizontal"
                android:paddingTop="5dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:weightSum="1"
            android:layout_gravity="right"
            android:layout_marginLeft="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <ImageButton
                android:layout_width="@dimen/taxicosto_alto"
                android:layout_height="@dimen/taxicosto_alto"
                android:layout_column="18"
                android:id="@+id/guardarButton"
                android:src="@android:drawable/star_big_on"
                android:background="@android:color/transparent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/guardar_label"
                android:id="@+id/guardarText"
                android:layout_gravity="bottom|left|right|top"
                android:textAlignment="center"
                android:textColor="@color/resaltar_light" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>